--- a/src/assets/css/admin/style.css
+++ b/src/assets/css/admin/style.css
@@ -2522,7 +2522,7 @@ html.menu-opened body {
     border-radius: 6px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	display: flex;
-    margin: 1.875rem auto;
+    margin: 1.875rem auto 6px auto;
     max-width: 800px;
     min-height: 500px;
     width: 100%;
@@ -7282,7 +7282,12 @@ div.table-responsive>div.dataTables_wrapper>div.row {
 		width: 300px;
 	}
 }
+
 .stickysidebar {
     position: sticky;
     top: 0;
+}
+
+.cursor-pointer {
+	cursor: pointer;
 }
