fixed: permission table

--- a/src/assets/css/admin/vue-multiselect.css
+++ b/src/assets/css/admin/vue-multiselect.css
@@ -24,7 +24,7 @@
     width: 16px;
     height: 16px;
     border-radius: 100%;
-    border-color: #0f271a transparent transparent;
+    border-color: #1c5925 transparent transparent;
     border-style: solid;
     border-width: 2px;
     box-shadow: 0 0 0 1px transparent;
@@ -169,7 +169,7 @@
     margin-right: 10px;
     color: #fff;
     line-height: 1;
-    background: #0f271a;
+    background: #1c5925;
     margin-bottom: 5px;
     white-space: nowrap;
     overflow: hidden;
@@ -332,14 +332,14 @@
   }
 
   .multiselect__option--highlight {
-    background: #0f271a;
+    background: #1c5925;
     outline: none;
     color: white;
   }
 
   .multiselect__option--highlight::after {
     content: attr(data-select);
-    background: #0f271a;
+    background: #1c5925;
     color: white;
   }
 
